--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,6 @@ body {
 .main-elements,
 .buttons,
 .search-button,
-.recipe-section,
 .search-container,
 .recipe,
 .modal__overlay,
@@ -156,11 +155,6 @@ button:active {
 
 .recipe-section {
   margin: 20px;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  height: fit-content;
-  width: 100vw;
   min-width: 400px;
 }
 
@@ -546,8 +540,7 @@ button:active {
 }
 
 #recipes-header {
-  margin-right: 275px;
-  margin-bottom: 30px;
+  margin: 0 0 30px 2vw;
   color: var(--background-color);
 }
 
